--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -44,105 +44,113 @@ Outreachy Internships | Apply | Pick a Project
 	{{ current_round.sponsordetails|safe }}
 
 	{% if request.user.comrade.eligible_application %}
-		<h2>Finding a Mentor and an Internship Project</h2>
-		<p><img src="{% static 'bot-find-a-mentor.png' %}"></p>
-		<p>
-		The next step
-		in the Outreachy application process is to look through the list of
-		participating communities and internship projects, and pick one
-		or two projects that looks interesting to you.  Then you'll
-		start working on a contribution for the project.
-		</p>
-		<p>
-		Only applicants that make a contribution to a project
-		will be accepted as an intern, so it's good to not pick too
-		many projects to apply to.
-		We don't recommend applying to more than two projects.
-		</p>
-		<p>
-		Many people apply to communities that are accepting multiple
-		interns in order to increase their chances of getting accepted.
-		However, when all the applicants think that way, it means
-		projects that are only accepting one intern don't get a lot of
-		applicants. You should pick a project that looks interesting to
-		you, and will help you improve the skills you want to learn.
-		</p>
-		<p>
-		Many people get overwhelmed with the list of projects and don't
-		know how to choose a project! Our advice is to pick a project
-		whose mission resonates with you.
-		</p>
-		<p>
-		Once you've narrowed down you list of projects,
-		you can decide whether the project is right for you by:
-		</p>
-		<ul>
-			<li>
-			Introduce yourself to the project's mentor and discuss
-			the internship tasks or contribution tasks listed in the project details.
-			Outreachy mentors are friendly and welcome your questions!
-			</li>
-			<li>
-			Reading the project's wiki page
-			</li>
-			<li>
-			Lurking on the project's chat, forum, or IRC
-			channel (if your project uses IRC and you've
-			never used it before, you can read more <a
-			href="https://wiki.gnome.org/Outreachy/IRC">here</a>)
-			</li>
-			<li>
-			Building any software projects
-			and running them to check out its latest capabilities (the
-			project website usually has the instructions for doing
-			this, but don't hesitate twice to ask the project's
-			mentor or people on the project's chat forums for help
-			if you encounter any problems)
-			</li>
-			<li>
-			Looking at the open issues or feature requests for the project
-			</li>
-			<li>
-			Looking at the recent changes in the project's repository
-			or recent contributions pages.
-			</li>
-			<li>
-			Reading the recent discussion on the project's mailing list or forum.
-			</li>
-			<li>
-			Reading the blogs of the project's mentor and other project contributors.
-			</li>
-		</ul>
-		<p>
-		If you don't see a project that looks interesting to you, check
-		back once a week. Outreachy often adds projects after the
-		application period opens. If you
-		<a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">sign up for the announcements mailing list</a>,
-		you'll get an email mid-application period when
-		new projects are added.
-		</p>
-		<h2>Making Contributions</h2>
-		<p><img src="https://www.outreachy.org/media/images/bot-contribution.original.png"></p>
-		<p>
-		Once you've picked a project that looks interesting to you,
-		proceed to the next application process step, which is to start
-		your contribution to the project.  You should record your
-		in-progress contributions by logging them from the Outreachy
-		community landing pages linked from this page.  Only applicants with
-		recorded contributions will be eligible to be accepted as
-		interns.
-		</p>
-		<p>
-		Make your contributions early! Many applicants under-estimate
-		the time it will take to complete a contribution.
-		If a mentor with a popular project is working with several
-		promising applicants, they may close the project to new applicants.
-		</p>
+		{% if not current_round.has_application_deadline_passed %}
+			<h2>Finding a Mentor and an Internship Project</h2>
+			<p><img src="{% static 'bot-find-a-mentor.png' %}"></p>
+			<p>
+			The next step
+			in the Outreachy application process is to look through the list of
+			participating communities and internship projects, and pick one
+			or two projects that looks interesting to you.  Then you'll
+			start working on a contribution for the project.
+			</p>
+			<p>
+			Only applicants that make a contribution to a project
+			will be accepted as an intern, so it's good to not pick too
+			many projects to apply to.
+			We don't recommend applying to more than two projects.
+			</p>
+			<p>
+			Many people apply to communities that are accepting multiple
+			interns in order to increase their chances of getting accepted.
+			However, when all the applicants think that way, it means
+			projects that are only accepting one intern don't get a lot of
+			applicants. You should pick a project that looks interesting to
+			you, and will help you improve the skills you want to learn.
+			</p>
+			<p>
+			Many people get overwhelmed with the list of projects and don't
+			know how to choose a project! Our advice is to pick a project
+			whose mission resonates with you.
+			</p>
+			<p>
+			Once you've narrowed down you list of projects,
+			you can decide whether the project is right for you by:
+			</p>
+			<ul>
+				<li>
+				Introduce yourself to the project's mentor and discuss
+				the internship tasks or contribution tasks listed in the project details.
+				Outreachy mentors are friendly and welcome your questions!
+				</li>
+				<li>
+				Reading the project's wiki page
+				</li>
+				<li>
+				Lurking on the project's chat, forum, or IRC
+				channel (if your project uses IRC and you've
+				never used it before, you can read more <a
+				href="https://wiki.gnome.org/Outreachy/IRC">here</a>)
+				</li>
+				<li>
+				Building any software projects
+				and running them to check out its latest capabilities (the
+				project website usually has the instructions for doing
+				this, but don't hesitate twice to ask the project's
+				mentor or people on the project's chat forums for help
+				if you encounter any problems)
+				</li>
+				<li>
+				Looking at the open issues or feature requests for the project
+				</li>
+				<li>
+				Looking at the recent changes in the project's repository
+				or recent contributions pages.
+				</li>
+				<li>
+				Reading the recent discussion on the project's mailing list or forum.
+				</li>
+				<li>
+				Reading the blogs of the project's mentor and other project contributors.
+				</li>
+			</ul>
+			<p>
+			If you don't see a project that looks interesting to you, check
+			back once a week. Outreachy often adds projects after the
+			application period opens. If you
+			<a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">sign up for the announcements mailing list</a>,
+			you'll get an email mid-application period when
+			new projects are added.
+			</p>
+			<h2>Making Contributions</h2>
+			<p><img src="https://www.outreachy.org/media/images/bot-contribution.original.png"></p>
+			<p>
+			Once you've picked a project that looks interesting to you,
+			proceed to the next application process step, which is to start
+			your contribution to the project.  You should record your
+			in-progress contributions by logging them from the Outreachy
+			community landing pages linked from this page.  Only applicants with
+			recorded contributions will be eligible to be accepted as
+			interns.
+			</p>
+			<p>
+			Make your contributions early! Many applicants under-estimate
+			the time it will take to complete a contribution.
+			If a mentor with a popular project is working with several
+			promising applicants, they may close the project to new applicants.
+			</p>
+		{% else %}
+			{% include 'home/snippet/deadline_passed.html' %}
+		{% endif %}
 	{% endif %}
 	{% if ontime_projects or late_projects %}
-		<h2 id="open-projects">Outreachy Open Projects</h2>
+		{% if ontime_projects and not current_round.has_ontime_application_deadline_passed or late_projects and not current_round.has_late_application_deadline_passed %}
+			<h2 id="open-projects">Outreachy Open Projects</h2>
+		{% else %}
+			<h2 id="open-projects">Past Outreachy Projects</h2>
+		{% endif %}
 
-		<p>Each project mentor is looking for applicants who have
+		<p>Each project mentor looks for applicants who have
 		different skills. Sometimes a skill is a hard requirement for
 		an applicant to have. Other times, a mentor might prefer an
 		applicant to have a skill, but they would accept an applicant
@@ -157,17 +165,25 @@ Outreachy Internships | Apply | Pick a Project
 			{% endfor %}
 		</p>
 		{% if late_projects %}
-			<h3>Applications Due {{ current_round.appslate }}</h3>
+			{% if not current_round.has_late_application_deadline_passed %}
+				<h3>Applications Due {{ current_round.appslate }}</h3>
 
-			<p> The following projects have an extended deadline, and will be accepting contributions and applications from new
-			applicants until {{ current_round.appslate }}.</p>
+				<p> The following projects have an extended deadline, and will be accepting contributions and applications from new
+				applicants until {{ current_round.appslate }}.</p>
+			{% else %}
+				<h3>Applications Closed {{ current_round.appslate }}</h3>
+			{% endif %}
 		{% endif %}
 		
 		{% for community, projects in late_projects %}
 			<h4>{{ community.name }} - {{ community.get_number_of_funded_interns }} intern{{ community.get_number_of_funded_interns|pluralize }}</h4>
 			<p>{{ community.description }}</p>
 			{% if request.user.comrade.eligible_application or request.user.comrade.approved_mentor_or_coordinator %}
-				<p>Learn how to make a contribution to these internship projects on the
+				{% if not current_round.has_late_application_deadline_passed %}
+					<p>Learn how to make a contribution to these internship projects on the
+				{% else %}
+					<p>Learn more on the
+				{% endif %}
 				<a href="{% url 'community-landing' round_slug=current_round.slug slug=community.slug %}">{{ community.name }} community landing page</a>.</p>
 			{% else %}
 				{% include 'home/snippet/project_hidden.html' %}
@@ -178,17 +194,25 @@ Outreachy Internships | Apply | Pick a Project
 		{% endfor %}
 
 		{% if ontime_projects %}
-			<h3>Applications Due {{ current_round.appsclose }}</h3>
+			{% if not current_round.has_ontime_application_deadline_passed %}
+				<h3>Applications Due {{ current_round.appsclose }}</h3>
 
-			<p> The following projects are accepting contributions and applications from new
-			applicants until {{ current_round.appsclose }}.</p>
+				<p> The following projects are accepting contributions and applications from new
+				applicants until {{ current_round.appsclose }}.</p>
+			{% else %}
+				<h3>Applications Closed {{ current_round.appsclose }}</h3>
+			{% endif %}
 		{% endif %}
 		
 		{% for community, projects in ontime_projects %}
 			<h4>{{ community.name }} - {{ community.get_number_of_funded_interns }} intern{{ community.get_number_of_funded_interns|pluralize }}</h4>
 			<p>{{ community.description }}</p>
 			{% if request.user.comrade.eligible_application or request.user.comrade.approved_mentor_or_coordinator %}
-				<p>Learn how to make a contribution to these internship projects on the
+				{% if not current_round.has_ontime_application_deadline_passed %}
+					<p>Learn how to make a contribution to these internship projects on the
+				{% else %}
+					<p>Learn more about the {{ community.name }} on the
+				{% endif %}
 				<a href="{% url 'community-landing' round_slug=current_round.slug slug=community.slug %}">{{ community.name }} community landing page</a>.</p>
 			{% else %}
 				{% include 'home/snippet/project_hidden.html' %}
@@ -199,17 +223,28 @@ Outreachy Internships | Apply | Pick a Project
 		{% endfor %}
 	{% endif %}
 	{% if closed_projects %}
-		<h2>Closed Outreachy Internship Projects</h2>
+		{% if not current_round.has_ontime_application_deadline_passed %}
+			<h2>Closed Outreachy Internship Projects</h2>
 
-		<p>
-		The projects in this section already have many strong
-		candidates they have worked with. If you are just starting out
-		with the Outreachy application process, we don't suggest you
-		apply for these projects. If you have been working with the
-		project mentors, please continue to work with them. Make sure
-		to submit your in-progress contributions through the community
-		landing page, and complete your final project application.
-		</p>
+			<p>
+			The projects in this section already have many strong
+			candidates they have worked with. If you are just starting out
+			with the Outreachy application process, we don't suggest you
+			apply for these projects. If you have been working with the
+			project mentors, please continue to work with them. Make sure
+			to submit your in-progress contributions through the community
+			landing page, and complete your final project application.
+			</p>
+		{% else %}
+			<h2>Closed Early - Outreachy Internship Projects</h2>
+			<p>
+			The following projects were closed to new applicants before
+			the application deadline of {{ current_round.appsclose }}.
+			This typically means the mentors were working with many promising
+			applicants early in the application period. In future rounds,
+			applicants should make sure to start their contributions early
+			to similar projects.
+		{% endif %}
 
 		{% for community, projects in closed_projects %}
 			<h3>{{ community.name }}</h3>
