--- a/home/templates/home/snippet/eligibility_prompt.html
+++ b/home/templates/home/snippet/eligibility_prompt.html
@@ -1,15 +1,24 @@
 <div class="card border-info mb-3">
-    <div class="card-header text-white bg-warning">Check your eligibility!</div>
-    <div class="card-body">
-	<p class="card-text">
-	Before you apply for an Outreachy internship,
-	you must first check your eligibility.
-	</p>
-	<p class="card-text"><a href="{% url 'eligibility' %}" class="btn btn-success">Check Eligibility</a></p>
-	<p class="card-text">
-	Until you verify your eligibility, some information about the internships will be hidden,
-	including full project details, mentor contact information, and how to make contributions
-	to internship projects.
-	</p>
-    </div>
+	{% if not current_round.has_application_deadline_passed %}
+		<div class="card-header text-white bg-warning">Check your eligibility!</div>
+		<div class="card-body">
+			<p class="card-text">
+			Before you apply for an Outreachy internship,
+			you must first check your eligibility.
+			</p>
+			<p class="card-text"><a href="{% url 'eligibility' %}" class="btn btn-success">Check Eligibility</a></p>
+			<p class="card-text">
+			Until you verify your eligibility, some information about the internships will be hidden,
+			including full project details, mentor contact information, and how to make contributions
+			to internship projects.
+			</p>
+		</div>
+	{% else %}
+		<div class="card-header text-white bg-info">Internship applications are now closed</div>
+		<div class="card-body">
+			<div class="card-text">
+				{% include 'home/snippet/deadline_passed.html' %}
+			</div>
+		</div>
+	{% endif %}
 </div>
