--- a/home/templates/home/snippet/pending_prompt.html
+++ b/home/templates/home/snippet/pending_prompt.html
@@ -1,13 +1,22 @@
 <div class="card border-info mb-3">
-    <div class="card-header text-white bg-warning">Outreachy Application Pending</div>
-    <div class="card-body">
-	<p class="card-text">
-	The Outreachy organizers are checking details about your application.
-	</p>
-	<p class="card-text">
-	Until they verify your eligibility, some information about the internships will be hidden,
-	including full project details, mentor contact information, and how to make contributions
-	to internship projects.
-	</p>
-    </div>
+	{% if not current_round.has_application_deadline_passed %}
+		<div class="card-header text-white bg-warning">Outreachy Application Pending</div>
+		<div class="card-body">
+			<p class="card-text">
+			The Outreachy organizers are checking details about your application.
+			</p>
+			<p class="card-text">
+			Until they verify your eligibility, some information about the internships will be hidden,
+			including full project details, mentor contact information, and how to make contributions
+			to internship projects.
+			</p>
+		</div>
+	{% else %}
+		<div class="card-header text-white bg-info">Internship applications are now closed</div>
+		<div class="card-body">
+			<div class="card-text">
+				{% include 'home/snippet/deadline_passed.html' %}
+			</div>
+		</div>
+	{% endif %}
 </div>
