Be more clear about deadlines on the project contributions page

--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -133,7 +133,8 @@
 			Saving your application effectively submits it. There is no specific "Submit" option.
 		{% else %}
 			<h3>View Your Final Application</h3>
-			<p>
+			<p>The application deadline for this project has now passed, and your application is final and cannot be edited.
+			Your application will be considered for this internship project.
 		{% endif %}
 		If you wish to withdraw your application, there is a button at the bottom of your application to do so.<p>
 
@@ -155,6 +156,7 @@
 		you are welcome to continue making contributions to the projects you applied for.
 		We find that applicants often become passionate about their project, and get hooked on making contributions.
 		Many applicants who are selected for internships continue working past the application deadline, although it is not required.
+		You can continue to record contributions interns are announced.
 		</p>
 
 		<p>
