--- a/home/templates/home/snippet/apply_prompt.html
+++ b/home/templates/home/snippet/apply_prompt.html
@@ -10,7 +10,13 @@
 		Thank you for recording your contributions and creating {{ project_applications|pluralize:"a project application, project applications" }}. You will need to create an application for each project, in order to be eligible to be selected as an intern for that project.
 		</p>
 		<p class="card-text">
-		The application deadline is {{ current_round.appsclose|date:"F d, Y" }}. Some projects are open to late applications, and their application deadline will be {{ current_round.appslate|date:"F d, Y" }}.
+		{% if not current_round.has_ontime_application_deadline_passed %}
+			The application deadline is {{ current_round.appsclose|date:"F d, Y" }}. Some projects are open to late applications, and their application deadline will be {{ current_round.appslate|date:"F d, Y" }}.
+		{% elif not current_round.has_late_application_deadline_passed %}
+			The application deadline for most projects was {{ current_round.appsclose|date:"F d, Y" }}. Some projects are open to late applications, and their application deadline will be {{ current_round.appslate|date:"F d, Y" }}.
+		{% else %}
+			The late application deadline was {{ current_round.appslate|date:"F d, Y" }}. All project application deadlines have now passed. Your project applications will be reviewed.
+		{% endif %}
 		</p>
 {% elif current_round.has_application_deadline_passed %}
 	<div class="card border-info mb-3">
