--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -189,25 +189,25 @@
 			<p><a class='btn btn-primary' href="{{ final_application.get_submit_url }}">Update Your Application</a></p>
 		{% endif %}
 		<p><i>Your experience with this free software community and project:</i></p>
-		<p>{{ final_application.experience }}</p>
+		<pre>{{ final_application.experience }}</pre>
 		<p><i>Your experience with other free software communities:</i></p>
-		<p>{{ final_application.foss_experience }}</p>
+		<pre>{{ final_application.foss_experience }}</pre>
 		<p><i>Your relevant personal or class projects that relate to this project:</i></p>
-		<p>{{ final_application.relevant_projects }}</p>
+		<pre>{{ final_application.relevant_projects }}</pre>
 		{% if final_application.community_specific_questions %}
 		<p><i>Answers to community-specific questions:</i></p>
-		<p>{{ final_application.community_specific_questions }}</p>
+		<pre>{{ final_application.community_specific_questions }}</pre>
 		{% else %}
 		<p><i>You have not provided answers to community-specific questions. Please double check with your mentor and coordinator if you need to provide additional information.</i></p>
 		{% endif %}
 		{% if final_application.applying_to_gsoc %}
 		<p><i>Google Summer of Code communities and projects you are applying for, and the mentor contact information for those projects:</i></p>
-		<p>{{ final_application.applying_to_gsoc }}</p>
+		<pre>{{ final_application.applying_to_gsoc }}</pre>
 		{% else %}
 		<p><i>You are not applying to Google Summer of Code.</i></p>
 		{% endif %}
 		<p><i>Timeline of tasks for the internship period:</i></p>
-		<p>{% if final_application.timeline %}{{ final_application.timeline }}{% else %}TBD{% endif %}</p>
+		<pre>{% if final_application.timeline %}{{ final_application.timeline }}{% else %}TBD{% endif %}</pre>
 		{% if final_application.approval_status != final_application.WITHDRAWN %}
 		<p><a class='btn btn-warning' href="{{ final_application.get_withdraw_url }}">Withdraw Your Application</a></p>
 		{% endif %}
